test/failing/noconst1.trunnel

struct x {
  u8 a[Y];
}
